# ChangeLog for app-backup/boxbackup
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/boxbackup/ChangeLog,v 1.19 2009/12/23 15:08:20 grobian Exp $

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org> boxbackup-0.10.ebuild,
  +files/boxbackup-0.10-malloc.patch:
  Added patch to fix compilation on Darwin (and FreeBSD) and marked
  ~x86-macos and ~ppc-macos, bug #292187

  12 Oct 2009; Mark Loeser <halcy0n@gentoo.org> boxbackup-0.10.ebuild:
  QA fixes; unquoted variables

  05 Jan 2009; Patrick Lauer <patrick@gentoo.org> boxbackup-0.10.ebuild:
  Homepage fix

  18 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  -files/boxbackup-0.09-darwin.patch, -files/boxbackup-0.09-gentoo.patch,
  +files/boxbackup-0.10-gcc43.patch, -boxbackup-0.09-r1.ebuild,
  boxbackup-0.10.ebuild:
  Fix 226867, gcc43 compilation. Punt old. Thanks to mikko.tiihonen@iki.fi
  for gcc fix.

  23 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> boxbackup-0.10.ebuild:
  Use eautoreconf, not the bootstrap script.

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> metadata.xml,
  boxbackup-0.09-r1.ebuild, boxbackup-0.10.ebuild:
  Dropped ppc-macos keyword, see you in prefix, drop maintainership as I
  don't use boxbackup any more.

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> boxbackup-0.09-r1.ebuild,
  boxbackup-0.10.ebuild:
  Fix *initd and *envd calls, bug #173884.

  04 Feb 2007; Simon Stelling <blubb@gentoo.org> boxbackup-0.10.ebuild:
  stable on amd64; bug 156901

  24 Jan 2007; Marius Mauch <genone@gentoo.org> boxbackup-0.09-r1.ebuild,
  boxbackup-0.10.ebuild:
  Replacing einfo with elog

  04 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  boxbackup-0.10.ebuild:
  stable x86, bug #156901

  22 Oct 2006; Piotr Jaroszyński <peper@gentoo.org> boxbackup-0.10.ebuild: