@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX bbackupd.rc 514 RMD160 45e049878c4e15161f10c66d832ce2a74fe1851a SHA1 33b2c2a4b5c841431c735bf8ac771140c8e69a52 SHA256 bde55e7983a10f48ba7e1643baae29be2570d9259b0d87516f1638bd5a4b24e5
 AUX bbstored.rc 526 RMD160 7dca1b7a53730b7ae1320fcb96c150f5d6c1f71d SHA1 d79ab4b31a447a3b7853ee064043be1a31863d09 SHA256 fbcb3f3d4a348c3c2880cdc4926c17a8ee680329ed6681e5baab7cefc7849302
 AUX boxbackup-0.10-gcc41-noll.patch 4984 RMD160 3e7998467f41732d036d0dfb5722162ffc37ef79 SHA1 66a96d7758957e1cb60bc77cf7b19174a83c7098 SHA256 51d4b20e1f1e22fc7ee0a0deacf6f96f62e32b374db075dac2648e876b0d58f8
@@ -5,6 +8,13 @@ AUX boxbackup-0.10-gcc43.patch 7249 RMD160 9fd0076e7dd3e1700615963850bd2038de1f8
 AUX boxbackup-0.10-gentoo.patch 7655 RMD160 560f945af864ddd74faf74f74207b23d8443941a SHA1 77f06c35840ffa99d03efe7025aee3f2270fc988 SHA256 5f96bde2e19dc001353a69cc177e0d224f5e98dc57b7b8cf99c1ea41a00cae53
 AUX boxbackup-0.10-malloc.patch 953 RMD160 dbed2ce25b167028b9529e681f7a39086880f5d3 SHA1 8d97f8a61f9384f3c526e3ecfb5481475de768bb SHA256 7fb100d97e4a5f4efcc84d8338e241754d41b90417b3f0b47938d1b30d6d5c63
 DIST boxbackup-0.10.tgz 842450 RMD160 26f906f37a3b095026ddf12c9284e16515ceb752 SHA1 60bee707c6bb59f471546ae83ad0b89625228ded SHA256 09e88f4ee26b76b3d6e6a0cf3fc374e55d79dd84e9884dfc6a7635593862d361
-EBUILD boxbackup-0.10.ebuild 2084 RMD160 1c0ead3abfe9eede89bbe652f1473a1a695e4568 SHA1 b91d8441efd8be33c3c92994afdd87320d806d76 SHA256 b4540384746f6f51b339bcca4438065fbdc1a388c606b6de542c695dabe85843
-MISC ChangeLog 3425 RMD160 418fb43feed0de7e0f28338dfb9d3b27aae124ad SHA1 bf0f7ddfdf937483a0ec01c6a33655c0e41353b3 SHA256 1af4370cc448d0615eba2d33f3f77ee9f1160c3ceef8307b8d65750e9ce37ad7
+EBUILD boxbackup-0.10.ebuild 2106 RMD160 2d615872ed81a829fd3732657729ee6fe7344cd4 SHA1 fb58ddc0b5a784a1a5c5e84f40d4527462809b14 SHA256 dc1a82086d401e7c7525d0f6005e652c62e9d77b8179bee337ea031d5fe8b09a
+MISC ChangeLog 3544 RMD160 c3522a004916c191f50b34c78f56dae90c7f1518 SHA1 16097fa98f390d3e1ebb1baca03ba1ac23b30046 SHA256 3611ef376042707d14f08b3a7e502a3794237364ffac27a827e8d8405d8bd145
 MISC metadata.xml 371 RMD160 911b6739a17063b9f0b8f801e3c3d93959772814 SHA1 a95859b0243dd0a60a44d89c4e24ee8fb6baf3bf SHA256 b84b4008e862f2764fe9eae78720abd69c697de42b01ca86decb5526fddc37b8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAks/33IACgkQAiZjviIA2XjTRACg3c72f81ny9A7dP1+d9a8gl0z
+Ww0AoJ9OZjGj/FAxRnTmVfYNFKSyshsi
+=X/Az
+-----END PGP SIGNATURE-----
