@@ -1,6 +1,10 @@
 # ChangeLog for app-backup/boxbackup
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/boxbackup/ChangeLog,v 1.19 2009/12/23 15:08:20 grobian Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/boxbackup/ChangeLog,v 1.20 2010/01/03 00:06:09 flameeyes Exp $
+
+  03 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  boxbackup-0.10.ebuild:
+  Use -j1 for build (bug #299411).
 
   23 Dec 2009; Fabian Groffen <grobian@gentoo.org> boxbackup-0.10.ebuild,
   +files/boxbackup-0.10-malloc.patch:
